# audio_io

audio_io/: CMakeLists.txt  README.md  package.xml  setup.py
audio_io/launch/: capture.launch  play.launch  save.launch
audio_io/scripts/: capture.py  play.py  save.py
audio_io/src/audio_io/: utils.py
audio_io_msgs/: CMakeLists.txt  package.xml
audio_io_msgs/msg/: AudioData.msg
